account/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: user,order
    app.openshift.io/vcs-uri: https://github.com/drhelius/grpc-demo-account
    app.openshift.io/vcs-ref: ${ACCOUNT_VERSION}
  labels:
    app: account
    version: ${ACCOUNT_VERSION}
    app.kubernetes.io/name: account
    app.kubernetes.io/version: ${ACCOUNT_VERSION}
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: ${APP_NAME}
    app.openshift.io/runtime: golang
  name: account-${ACCOUNT_VERSION}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
      version: ${ACCOUNT_VERSION}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: account
        version: ${ACCOUNT_VERSION}
    spec:
      containers:
      - image: ${ACCOUNT_IMAGE}:${ACCOUNT_VERSION}
        imagePullPolicy: Always
        name: account
        ports:
        - containerPort: 5000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: ${CPU_LIMIT}
            memory: ${MEMORY_LIMIT}Mi
          requests:
            cpu: ${CPU_REQUEST}
            memory: ${MEMORY_REQUEST}Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
