account/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: account
    version: ${ACCOUNT_VERSION}
    app.kubernetes.io/name: account
    app.kubernetes.io/version: ${ACCOUNT_VERSION}
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: ${APP_NAME}
  name: account
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: account
    weight: 100
